# Private

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  FEATURES.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 6739e9f25721_initial_schema.py
app/: config.py  database.py  main.py
app/api/v1/: approval.py  brand.py  campaigns.py  content.py  content_plan.py  generation.py  image_generate.py  platforms.py  publishing.py  render.py  schedule.py  templates.py
app/models/: __init__.py  approval.py  brand.py  campaign.py  content.py  content_plan.py  content_template.py  generation_conversation.py  image_asset.py  platform_account.py  publish_log.py  schedule.py  user.py
app/prompts/: ad_copy.txt  caption.txt  content_plan.txt  google_app_asset.txt  interactive_system.txt  social_post.txt  video_script.txt
app/publishers/: base.py  facebook.py  instagram.py  registry.py  threads.py  tiktok.py
app/schemas/: approval.py  brand.py  campaign.py  content.py  content_plan.py  content_template.py  generation.py  image_asset.py  platform.py  render.py  schedule.py
app/services/: content_generator.py  content_plan_generator.py  gemini_image_client.py  image_renderer.py  interactive_generator.py  llm_client.py  s3_client.py
app/templates/defaults/: facebook_banner.json  instagram_story.json  square_post.json
app/workers/: celery_app.py  render_tasks.py
dashboard/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/src/app/: layout.tsx  (+1 more)
(+21 files in other folders)
